cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(TULIP REQUIRED)

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

set(PLUGIN_NAME "EpsilonNeighborhoodConnectorOnLayout-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED EpsilonNeighborhoodConnectorOnLayout.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})


set(PLUGIN_NAME "EpsilonNeighborhoodConnectorOnDoubleVector-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED EpsilonNeighborhoodConnectorOnDoubleVector.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})


set(PLUGIN_NAME "EpsilonNeighborhoodConnectorOnIntegerVector-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED EpsilonNeighborhoodConnectorOnIntegerVector.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})
